tests/invalid/module/unknown_qualified_enum_constructor.facet
fn main() -> affine core::option::Option<affine isize> {
  missing::option::Option<affine isize>::Some(1)
}
